# C-generic-list-deprecated

./: CMakeLists.txt  README.md
cmake/: tlist-deprecated-config.cmake.in
include/: Tlist.h
src/: Titerator.c  Tlist.c
